--- a/starship.toml
+++ b/starship.toml
@@ -1,6 +1,7 @@
 "$schema" = "https://starship.rs/config-schema.json"
 
 add_newline = false
+command_timeout = 5000
 
 format = "$directory$git_branch$git_status$character"
 
